fixed the bug in post : bug1 - name is too long  |  bug2 - file is not getting changed when changing the file

--- a/static/css/form.css
+++ b/static/css/form.css
@@ -30,6 +30,19 @@
 .inputbox{
     margin-bottom: 2rem;
 }
+
+.inputbox-inputfield{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.inputbox-inputfield input{
+    margin-inline: 0.1rem;
+}
+.randomiser{
+    cursor: pointer;
+}
 .inputbox--btn{
     margin-top: 0rem;
     display: flex;
